# pointypoints

./: .dockerignore  .env.dist  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
app/: frontend.py  main.py  security.py  settings.py
app/api/: __init__.py  points.py  user.py
app/db/: crud.py  database.py  get_db.py  models.py  point_value.py  schemas.py  user.py
app/frontend/: frontend.py  points.py  session.py  theme.py
app/lib/: auth.py  twitch.py
docker/: docker-compose.yml  init.sh
migrations/: env.py
migrations/versions/: 202304302332-9603fc132616_add_date.py  202305010240-df0fe943d658_initial.py  202305010246-f078bf41b8a3_add_twitch_id.py  202305011222-db8c1d865a90_remove_index.py  202305011233-94efa8093307_add_token.py  202305012105-d0af3fd39346_add_index.py  202305012256-fea138f6cf61_remove_personal_info.py  202305071220-237b5564e401_init.py  a5e1d4e1dbeb_initial_migration.py
